Don't wrap times or actions.  Fix time display am/pm.

--- a/firefox/journal/content/journal.css
+++ b/firefox/journal/content/journal.css
@@ -161,6 +161,9 @@ input.green-button:hover {
 	padding: 0.2em;
 	vertical-align: middle;
 }
+.time, .action {
+  white-space: pre;
+}
 .meta {
 	display: table-row;
   text-align: right;
